--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
                 </div>
             
             <div id="calendar-view" style="display: none;">
-                <div class="form-section" style="border: none; background: none;"> <h2>My Accepted Events</h2>
+                <div class="form-section" style="border: none; background: none;">
+                    <h2>My Accepted Events</h2>
                     <div id="calendar-event-list" style="margin-top: 20px;"></div>
                 </div>
             </div>
